--- a/files/globals.yml
+++ b/files/globals.yml
@@ -1,9 +1,6 @@
 ---
-# You can use this file to override _any_ variable throughout Kolla.
 # Additional options can be found in the
 # 'kolla-ansible/ansible/group_vars/all.yml' file. Default value of all the
-# commented parameters are shown here, To override the default value uncomment
-# the parameter and change its value.
 
 ###############
 # Kolla options
@@ -34,7 +31,7 @@
 # All-In-One without haproxy and keepalived, you can set enable_haproxy to no
 # in "OpenStack options" section, and set this value to the IP of your
 # 'network_interface' as set in the Networking section below.
-#kolla_internal_vip_address: "10.10.10.254"
+kolla_internal_vip_address: "192.168.127.75"
 
 # This is the DNS name that maps to the kolla_internal_vip_address VIP. By
 # default it is the same as kolla_internal_vip_address.
@@ -106,19 +103,6 @@
 # followed for other types of interfaces.
 #network_interface: "eth0"
 
-# These can be adjusted for even more customization. The default is the same as
-# the 'network_interface'. These interfaces must contain an IP address.
-#kolla_external_vip_interface: "{{ network_interface }}"
-#api_interface: "{{ network_interface }}"
-#storage_interface: "{{ network_interface }}"
-#swift_storage_interface: "{{ storage_interface }}"
-#swift_replication_interface: "{{ swift_storage_interface }}"
-#tunnel_interface: "{{ network_interface }}"
-#dns_interface: "{{ network_interface }}"
-#octavia_network_interface: "{{ api_interface }}"
-
-# Configure the address family (AF) per network.
-# Valid options are [ ipv4, ipv6 ]
 #network_address_family: "ipv4"
 #api_address_family: "{{ network_address_family }}"
 #storage_address_family: "{{ network_address_family }}"
