--- a/files/globals.yml
+++ b/files/globals.yml
@@ -31,7 +31,7 @@
 # All-In-One without haproxy and keepalived, you can set enable_haproxy to no
 # in "OpenStack options" section, and set this value to the IP of your
 # 'network_interface' as set in the Networking section below.
-kolla_internal_vip_address: "192.168.127.75"
+kolla_internal_vip_address: "172.17.0.104"
 
 # This is the DNS name that maps to the kolla_internal_vip_address VIP. By
 # default it is the same as kolla_internal_vip_address.
@@ -101,7 +101,13 @@ kolla_internal_vip_address: "192.168.127.75"
 # Yet another way to workaround the naming problem is to create a bond for the
 # interface on all hosts and give the bond name here. Similar strategy can be
 # followed for other types of interfaces.
-#network_interface: "eth0"
+network_interface: "bond1"
+neutron_external_interface: "bond2"
+api_interface: "bond3"
+storage_interface: "bond4"
+swift_storage_interface: "bond5"
+tunnel_interface: "bond6"
+
 
 #network_address_family: "ipv4"
 #api_address_family: "{{ network_address_family }}"
