--- a/files/globals.yml
+++ b/files/globals.yml
@@ -56,6 +56,10 @@ kolla_internal_vip_address: "172.17.0.104"
 # Docker options
 ################
 
+docker_custom_config:
+  registry-mirrors:
+    - 192.168.127.220:4000
+
 # Custom docker registry settings:
 #docker_registry:
 #docker_registry_insecure: "{{ 'yes' if docker_registry else 'no' }}"
