--- a/files/docker-registry.service
+++ b/files/docker-registry.service
@@ -7,6 +7,9 @@ Requires=docker.service
 [Service]
 Type=oneshot
 User=root
-ExecStart=/root/docker-registry.sh
+RemainAfterExit=yes
+ExecStartPre=-/root/docker-registry-stop.sh
+ExecStart=/root/docker-registry-start.sh
+ExecStop=/root/docker-registry-stop.sh
 [Install]
 WantedBy=multi-user.target
