--- a/files/globals.yml
+++ b/files/globals.yml
@@ -61,9 +61,9 @@ docker_custom_config:
     - http://192.168.127.220:4000
 
 # Custom docker registry settings:
-#docker_registry:
-#docker_registry_insecure: "{{ 'yes' if docker_registry else 'no' }}"
-#docker_registry_username:
+docker_registry:
+docker_registry_insecure: "{{ 'yes' if docker_registry else 'no' }}"
+docker_registry_username: feralcoder
 # docker_registry_password is set in the passwords.yml file.
 
 # Namespace of images:
