--- a/files/globals.yml
+++ b/files/globals.yml
@@ -56,6 +56,9 @@ kolla_internal_vip_address: "172.17.0.104"
 # Docker options
 ################
 
+docker_yum_url: http://192.168.127.220/docker/centos/
+docker_yum_gpgkey: http://192.168.127.220/docker/centos/gpg
+
 docker_custom_config:
   registry-mirrors:
     - http://192.168.127.220:4000
