enable central logging

--- a/files/globals.yml
+++ b/files/globals.yml
@@ -269,7 +269,7 @@ tunnel_interface: "bond6"
 #enable_ceilometer: "no"
 #enable_ceilometer_ipmi: "no"
 #enable_cells: "no"
-#enable_central_logging: "no"
+enable_central_logging: "yes"
 #enable_chrony: "yes"
 enable_cinder: "yes"
 #enable_cinder_backup: "yes"
@@ -285,7 +285,7 @@ enable_cinder: "yes"
 #enable_designate: "no"
 #enable_destroy_images: "no"
 #enable_elasticsearch: "{{ 'yes' if enable_central_logging | bool or enable_osprofiler | bool or enable_skydive | bool or enable_monasca | bool else 'no' }}"
-#enable_elasticsearch_curator: "no"
+enable_elasticsearch_curator: "yes"
 #enable_etcd: "no"
 #enable_fluentd: "yes"
 #enable_freezer: "no"
