--- a/files/ceph-all.yml
+++ b/files/ceph-all.yml
@@ -763,10 +763,10 @@ is_hci: true
 #dashboard_admin_user: admin
 #dashboard_admin_user_ro: false
 # This variable must be set with a strong custom password when dashboard_enabled is True
-#dashboard_admin_password: p@ssw0rd
+dashboard_admin_password: p@ssw0rd
 # We only need this for SSL (https) connections
-#dashboard_crt: ''
-#dashboard_key: ''
+dashboard_crt: ''
+dashboard_key: ''
 #dashboard_tls_external: false
 #dashboard_grafana_api_no_ssl_verify: "{{ true if dashboard_protocol == 'https' and not grafana_crt and not grafana_key else false }}"
 #dashboard_rgw_api_user_id: ceph-dashboard
@@ -777,10 +777,10 @@ is_hci: true
 #node_exporter_port: 9100
 #grafana_admin_user: admin
 # This variable must be set with a strong custom password when dashboard_enabled is True
-#grafana_admin_password: admin
+grafana_admin_password: p@ssw0rd
 # We only need this for SSL (https) connections
-#grafana_crt: ''
-#grafana_key: ''
+grafana_crt: ''
+grafana_key: ''
 #grafana_container_image: "grafana/grafana:5.4.3"
 # When using https, please fill with a hostname for which grafana_crt is valid.
 #grafana_server_fqdn: ''
