--- a/files/ceph-all.yml
+++ b/files/ceph-all.yml
@@ -18,6 +18,7 @@ public_network: 172.18.0.0/24
 cluster_network: 172.19.0.0/24
 ceph_docker_image: "ceph/daemon"
 ceph_docker_image_tag: latest-nautilus
+#ceph_docker_image_tag: master-86da1a4-nautilus-centos-7
 containerized_deployment: true
 ceph_docker_registry: docker.io
 dashboard_admin_password: admin
