--- a/files/ceph-all.yml
+++ b/files/ceph-all.yml
@@ -17,12 +17,12 @@ cluster_interface: bond5
 public_network: 172.18.0.0/24
 cluster_network: 172.19.0.0/24
 ceph_docker_image: "ceph/daemon"
-ceph_docker_image_tag: latest-nautilus
-#ceph_docker_image_tag: master-86da1a4-nautilus-centos-7
+#ceph_docker_image_tag: latest-nautilus
+ceph_docker_image_tag: master-86da1a4-nautilus-centos-7
 containerized_deployment: true
 ceph_docker_registry: docker.io
-dashboard_admin_password: admin
-grafana_admin_password: password
+dashboard_admin_password: p@ssw0rd
+grafana_admin_password: p@ssw0rd
 
 is_hci: true
 
@@ -754,20 +754,19 @@ is_hci: true
 #############
 # DASHBOARD #
 #############
-#dashboard_enabled: True
+dashboard_enabled: True
 # Choose http or https
 # For https, you should set dashboard.crt/key and grafana.crt/key
 # If you define the dashboard_crt and dashboard_key variables, but leave them as '',
 # then we will autogenerate a cert and keyfile
-#dashboard_protocol: https
-#dashboard_port: 8443
+dashboard_protocol: http
+dashboard_port: 8080
 #dashboard_admin_user: admin
 #dashboard_admin_user_ro: false
 # This variable must be set with a strong custom password when dashboard_enabled is True
-dashboard_admin_password: p@ssw0rd
 # We only need this for SSL (https) connections
-dashboard_crt: ''
-dashboard_key: ''
+#dashboard_crt: ''
+#dashboard_key: ''
 #dashboard_tls_external: false
 #dashboard_grafana_api_no_ssl_verify: "{{ true if dashboard_protocol == 'https' and not grafana_crt and not grafana_key else false }}"
 #dashboard_rgw_api_user_id: ceph-dashboard
@@ -778,10 +777,9 @@ dashboard_key: ''
 #node_exporter_port: 9100
 #grafana_admin_user: admin
 # This variable must be set with a strong custom password when dashboard_enabled is True
-grafana_admin_password: p@ssw0rd
 # We only need this for SSL (https) connections
-grafana_crt: ''
-grafana_key: ''
+#grafana_crt: ''
+#grafana_key: ''
 #grafana_container_image: "grafana/grafana:5.4.3"
 # When using https, please fill with a hostname for which grafana_crt is valid.
 #grafana_server_fqdn: ''
