--- a/files/ceph-all.yml
+++ b/files/ceph-all.yml
@@ -77,7 +77,7 @@ is_hci: true
 # If configure_firewall is true, then ansible will try to configure the
 # appropriate firewalling rules so that Ceph daemons can communicate
 # with each others.
-#configure_firewall: True
+configure_firewall: false
 
 # Open ports on corresponding nodes if firewall is installed on it
 #ceph_mon_firewall_zone: public
