Rename ceph-client configs for clarity. Add some ceph configs.

--- a/files/ceph-client-cinder-volume.conf
+++ b/files/ceph-client-cinder-volume.conf
@@ -9,3 +9,4 @@ rbd_pool=volumes
 volume_backend_name=rbd-1
 volume_driver=cinder.volume.drivers.rbd.RBDDriver
 rbd_secret_uuid = {{ cinder_rbd_secret_uuid }}
+rados_connect_timeout = -1
