--- a/files/ceph-client-glance-api.conf
+++ b/files/ceph-client-glance-api.conf
@@ -4,3 +4,13 @@ default_store = rbd
 rbd_store_pool = images
 rbd_store_user = glance
 rbd_store_ceph_conf = /etc/ceph/ceph.conf
+
+# Enable copy-on-write
+show_image_direct_url = True
+
+
+# Disable cache management
+[paste_deploy]
+flavor = keystone
+
+
