--- a/files/ceph-all.yml
+++ b/files/ceph-all.yml
@@ -26,6 +26,9 @@ grafana_admin_password: p@ssw0rd
 
 is_hci: true
 
+cephx: true
+
+configure_firewall: false
 
 
 ###########
@@ -77,7 +80,6 @@ is_hci: true
 # If configure_firewall is true, then ansible will try to configure the
 # appropriate firewalling rules so that Ceph daemons can communicate
 # with each others.
-configure_firewall: false
 
 # Open ports on corresponding nodes if firewall is installed on it
 #ceph_mon_firewall_zone: public
@@ -275,7 +277,6 @@ configure_firewall: false
 # Permissions for keyring files in /etc/ceph
 #ceph_keyring_permissions: '0600'
 
-cephx: false
 
 ## Client options
 #
