--- a/files/kolla-globals-remainder.yml
+++ b/files/kolla-globals-remainder.yml
@@ -404,7 +404,7 @@ enable_manila_backend_cephfs_native: "no"
 # External Ceph options
 #######################
 # External Ceph - cephx auth enabled (this is the standard nowadays, defaults to yes)
-external_ceph_cephx_enabled: "no"
+external_ceph_cephx_enabled: "yes"
 
 # Glance
 #ceph_glance_keyring: "ceph.client.glance.keyring"
