enable mariabackup and magnum for kubernetes

--- a/files/kolla-globals-remainder.yml
+++ b/files/kolla-globals-remainder.yml
@@ -322,13 +322,13 @@ enable_grafana: "yes"
 #enable_kafka: "{{ enable_monasca | bool }}"
 #enable_kibana: "{{ 'yes' if enable_central_logging | bool or enable_monasca | bool else 'no' }}"
 #enable_kuryr: "no"
-#enable_magnum: "no"
+enable_magnum: "yes"
 enable_manila: "no"
 #enable_manila_backend_generic: "no"
 #enable_manila_backend_hnas: "no"
 enable_manila_backend_cephfs_native: "no"
 #enable_manila_backend_cephfs_nfs: "no"
-#enable_mariabackup: "no"
+enable_mariabackup: "yes"
 #enable_masakari: "no"
 #enable_mistral: "no"
 #enable_monasca: "no"
