--- a/files/ceph-all.yml
+++ b/files/ceph-all.yml
@@ -773,7 +773,7 @@ dashboard_port: 8480
 #dashboard_rgw_api_user_id: ceph-dashboard
 #dashboard_rgw_api_admin_resource: ''
 #dashboard_rgw_api_no_ssl_verify: False
-#dashboard_frontend_vip: ''
+dashboard_frontend_vip: '172.18.0.10'
 #node_exporter_container_image: "prom/node-exporter:v0.17.0"
 #node_exporter_port: 9100
 #grafana_admin_user: admin
