--- a/files/kolla-globals-localpull.yml
+++ b/files/kolla-globals-localpull.yml
@@ -3,7 +3,8 @@
 # PINNED CONTAINER VERSIONS
 docker_registry: 192.168.127.220:4001
 docker_namespace: "feralcoder"
-openstack_release: "feralcoder-20210322"
+#openstack_release: "feralcoder-20210322"
+openstack_release: "feralcoder-20210323"
 
 ## LATEST CONTAINER VERSIONS
 #docker_registry:
