enable octavia, use built source containers, enable TLS on ceph and stack

--- a/files/kolla-globals-localpull.yml
+++ b/files/kolla-globals-localpull.yml
@@ -4,7 +4,8 @@
 docker_registry: 192.168.127.220:4001
 docker_namespace: "feralcoder"
 #openstack_release: "feralcoder-20210322"
-openstack_release: "feralcoder-20210324"
+#openstack_release: "feralcoder-20210324"
+openstack_release: "latest"
 
 ## LATEST CONTAINER VERSIONS
 #docker_registry:
