--- a/files/ceph-all.yml
+++ b/files/ceph-all.yml
@@ -760,14 +760,14 @@ dashboard_enabled: True
 # For https, you should set dashboard.crt/key and grafana.crt/key
 # If you define the dashboard_crt and dashboard_key variables, but leave them as '',
 # then we will autogenerate a cert and keyfile
-dashboard_protocol: http
-dashboard_port: 8480
+dashboard_protocol: https
+dashboard_port: 8443
 #dashboard_admin_user: admin
 #dashboard_admin_user_ro: false
 # This variable must be set with a strong custom password when dashboard_enabled is True
 # We only need this for SSL (https) connections
-#dashboard_crt: ''
-#dashboard_key: ''
+dashboard_crt: ''
+dashboard_key: ''
 #dashboard_tls_external: false
 #dashboard_grafana_api_no_ssl_verify: "{{ true if dashboard_protocol == 'https' and not grafana_crt and not grafana_key else false }}"
 #dashboard_rgw_api_user_id: ceph-dashboard
