--- a/files/ceph-docker-prerequisites.yml
+++ b/files/ceph-docker-prerequisites.yml
@@ -4,16 +4,16 @@
 - name: include specific variables
   include_vars: "{{ item }}"
   with_first_found:
-    - "{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
-    - "{{ ansible_os_family }}.yml"
+    - "{{ ansible_facts['distribution'] }}-{{ ansible_facts['distribution_major_version'] }}.yml"
+    - "{{ ansible_facts['os_family'] }}.yml"
 
 - name: debian based systems tasks
   include_tasks: debian_prerequisites.yml
   when:
-    - ansible_os_family == 'Debian'
+    - ansible_facts['os_family'] == 'Debian'
   tags: with_pkg
 
-# feralcoder: Commented out - not installing docker here, don't need extras for ceph?
+## feralcoder: Commented out - not installing docker here, don't need extras for ceph?
 ## ensure extras enabled for docker
 #- name: enable extras on centos
 #  yum_repository:
@@ -21,12 +21,12 @@
 #    state: present
 #    enabled: yes
 #  when:
-#    - ansible_distribution == 'CentOS'
+#    - ansible_facts['distribution'] == 'CentOS'
 #    - ceph_docker_enable_centos_extra_repo | bool
 #  tags:
 #    with_pkg
-
-# NO NEED TO INSTALL DOCKER - should already be here after setup-kolla.sh
+#
+## NO NEED TO INSTALL DOCKER - should already be here after setup-kolla.sh
 #- name: install container packages
 #  package:
 #    name: ['{{ container_package_name }}', '{{ container_binding_name }}']
