--- a/files/kolla-globals-remainder.yml
+++ b/files/kolla-globals-remainder.yml
@@ -745,7 +745,7 @@ nova_backend_ceph: "yes"
 #    enable_dhcp: yes
 
 # Octavia management network subnet CIDR.
-#octavia_amp_network_cidr: 10.0.0.0/24
+octavia_amp_network_cidr: 172.10.0.0/24
 
 #octavia_amp_image_tag: "amphora"
 
