--- a/files/kolla-globals-localpull.yml
+++ b/files/kolla-globals-localpull.yml
@@ -5,7 +5,7 @@ docker_registry: 192.168.127.220:4001
 docker_namespace: "feralcoder"
 #openstack_release: "feralcoder-20210322"
 #openstack_release: "feralcoder-20210324"
-openstack_release: "latest"
+openstack_release: 'feralcoder-20210330_0226'
 
 ## LATEST CONTAINER VERSIONS
 #docker_registry:
