disabling gnocchi for now, pure errors

--- a/files/kolla-globals-remainder.yml
+++ b/files/kolla-globals-remainder.yml
@@ -282,7 +282,7 @@ enable_elasticsearch_curator: "yes"
 #enable_etcd: "no"
 #enable_fluentd: "yes"
 #enable_freezer: "no"
-enable_gnocchi: "yes"
+enable_gnocchi: "no"
 #enable_gnocchi_statsd: "no"
 enable_grafana: "yes"
 #enable_heat: "{{ enable_openstack_core | bool }}"
