--- a/files/kolla-globals-remainder.yml
+++ b/files/kolla-globals-remainder.yml
@@ -738,17 +738,20 @@ nova_backend_ceph: "yes"
 octavia_amp_network:
   name: lb-mgmt-net
   shared: true
+  external: true
+  provider_physical_network: physnet1
+  provider_network_type: flat
   subnet:
     name: lb-mgmt-subnet
     cidr: "{{ octavia_amp_network_cidr }}"
     no_gateway_ip: no
     enable_dhcp: yes
-    gateway_ip: 172.31.0.1
-    allocation_pool_start: 172.31.0.100
-    allocation_pool_end: 172.31.0.199
+    gateway_ip: 192.168.40.241
+    allocation_pool_start: 192.168.40.100
+    allocation_pool_end: 192.168.40.149
 
 # Octavia management network subnet CIDR.
-octavia_amp_network_cidr: 172.31.0.0/24
+octavia_amp_network_cidr: 192.168.40.0/24
 
 #octavia_amp_image_tag: "amphora"
 
