--- a/files/kolla-globals-remainder.yml
+++ b/files/kolla-globals-remainder.yml
@@ -1,3 +1,17 @@
+---
+docker_yum_url: http://192.168.127.220/docker/centos/
+docker_yum_gpgkey: http://192.168.127.220/docker/centos/gpg
+docker_custom_config:
+  registry-mirrors:
+    - http://192.168.127.220:4000
+
+
+
+# You can use this file to override _any_ variable throughout Kolla.
+# Additional options can be found in the
+# 'kolla-ansible/ansible/group_vars/all.yml' file. Default value of all the
+# commented parameters are shown here, To override the default value uncomment
+# the parameter and change its value.
 
 ###############
 # Kolla options
@@ -6,12 +20,15 @@
 #config_strategy: "COPY_ALWAYS"
 
 # Valid options are ['centos', 'debian', 'rhel', 'ubuntu']
+#kolla_base_distro: "centos"
 kolla_base_distro: "centos"
 
 # Valid options are [ binary, source ]
+#kolla_install_type: "binary"
 kolla_install_type: "source"
 
 # Do not override this unless you know what you are doing.
+#openstack_release: "victoria"
 
 # Docker image tag used by default.
 #openstack_tag: "{{ openstack_release ~ openstack_tag_suffix }}"
@@ -27,6 +44,7 @@ kolla_install_type: "source"
 # All-In-One without haproxy and keepalived, you can set enable_haproxy to no
 # in "OpenStack options" section, and set this value to the IP of your
 # 'network_interface' as set in the Networking section below.
+#kolla_internal_vip_address: "10.10.10.254"
 kolla_internal_vip_address: "172.17.0.104"
 
 # This is the DNS name that maps to the kolla_internal_vip_address VIP. By
@@ -52,18 +70,15 @@ kolla_internal_vip_address: "172.17.0.104"
 # Docker options
 ################
 
-docker_yum_url: http://192.168.127.220/docker/centos/
-docker_yum_gpgkey: http://192.168.127.220/docker/centos/gpg
-
-docker_custom_config:
-  registry-mirrors:
-    - http://192.168.127.220:4000
-
-
+# Custom docker registry settings:
+#docker_registry:
+#docker_registry_insecure: "{{ 'yes' if docker_registry else 'no' }}"
 docker_registry_insecure: "{{ 'yes' if docker_registry else 'no' }}"
+#docker_registry_username:
 # docker_registry_password is set in the passwords.yml file.
 
 # Namespace of images:
+#docker_namespace: "kolla"
 
 # Docker client timeout in seconds.
 #docker_client_timeout: 120
@@ -101,14 +116,26 @@ docker_registry_insecure: "{{ 'yes' if docker_registry else 'no' }}"
 # Yet another way to workaround the naming problem is to create a bond for the
 # interface on all hosts and give the bond name here. Similar strategy can be
 # followed for other types of interfaces.
+#network_interface: "eth0"
 network_interface: "bond1"
-neutron_external_interface: "bond2"
+
+# These can be adjusted for even more customization. The default is the same as
+# the 'network_interface'. These interfaces must contain an IP address.
+#kolla_external_vip_interface: "{{ network_interface }}"
+#api_interface: "{{ network_interface }}"
 api_interface: "bond3"
+#storage_interface: "{{ network_interface }}"
 storage_interface: "bond4"
+#swift_storage_interface: "{{ storage_interface }}"
 swift_storage_interface: "bond4" # I BELIEVE there's no interface defined for ceph-internals, here
+#swift_replication_interface: "{{ swift_storage_interface }}"
+#tunnel_interface: "{{ network_interface }}"
 tunnel_interface: "bond6"
+#dns_interface: "{{ network_interface }}"
+#octavia_network_interface: "{{ api_interface }}"
 
-
+# Configure the address family (AF) per network.
+# Valid options are [ ipv4, ipv6 ]
 #network_address_family: "ipv4"
 #api_address_family: "{{ network_address_family }}"
 #storage_address_family: "{{ network_address_family }}"
@@ -125,6 +152,7 @@ tunnel_interface: "bond6"
 # configurations. It is recommended this interface not be configured with any IP
 # addresses for that reason.
 #neutron_external_interface: "eth1"
+neutron_external_interface: "bond2"
 
 # Valid options are [ openvswitch, ovn, linuxbridge, vmware_nsxv, vmware_nsxv3, vmware_dvs ]
 # if vmware_nsxv3 is selected, enable_openvswitch MUST be set to "no" (default is yes)
@@ -262,8 +290,10 @@ tunnel_interface: "bond6"
 #enable_ceilometer: "no"
 #enable_ceilometer_ipmi: "no"
 #enable_cells: "no"
+#enable_central_logging: "no"
 enable_central_logging: "yes"
 #enable_chrony: "yes"
+#enable_cinder: "no"
 enable_cinder: "yes"
 #enable_cinder_backup: "yes"
 #enable_cinder_backend_hnas_nfs: "no"
@@ -278,12 +308,15 @@ enable_cinder: "yes"
 #enable_designate: "no"
 #enable_destroy_images: "no"
 #enable_elasticsearch: "{{ 'yes' if enable_central_logging | bool or enable_osprofiler | bool or enable_skydive | bool or enable_monasca | bool else 'no' }}"
+#enable_elasticsearch_curator: "no"
 enable_elasticsearch_curator: "yes"
 #enable_etcd: "no"
 #enable_fluentd: "yes"
 #enable_freezer: "no"
+#enable_gnocchi: "no"
 enable_gnocchi: "no"
 #enable_gnocchi_statsd: "no"
+#enable_grafana: "no"
 enable_grafana: "yes"
 #enable_heat: "{{ enable_openstack_core | bool }}"
 #enable_horizon: "{{ enable_openstack_core | bool }}"
@@ -322,12 +355,16 @@ enable_grafana: "yes"
 #enable_kafka: "{{ enable_monasca | bool }}"
 #enable_kibana: "{{ 'yes' if enable_central_logging | bool or enable_monasca | bool else 'no' }}"
 #enable_kuryr: "no"
+#enable_magnum: "no"
 enable_magnum: "yes"
+#enable_manila: "no"
 enable_manila: "no"
 #enable_manila_backend_generic: "no"
 #enable_manila_backend_hnas: "no"
+#enable_manila_backend_cephfs_native: "no"
 enable_manila_backend_cephfs_native: "no"
 #enable_manila_backend_cephfs_nfs: "no"
+#enable_mariabackup: "no"
 enable_mariabackup: "yes"
 #enable_masakari: "no"
 #enable_mistral: "no"
@@ -340,6 +377,7 @@ enable_mariabackup: "yes"
 #enable_neutron_qos: "no"
 #enable_neutron_agent_ha: "no"
 #enable_neutron_bgp_dragent: "no"
+#enable_neutron_provider_networks: "no"
 enable_neutron_provider_networks: "yes"
 #enable_neutron_segments: "no"
 #enable_neutron_sfc: "no"
@@ -349,6 +387,7 @@ enable_neutron_provider_networks: "yes"
 #enable_neutron_port_forwarding: "no"
 #enable_nova_serialconsole_proxy: "no"
 #enable_nova_ssh: "yes"
+#enable_octavia: "no"
 enable_octavia: "yes"
 #enable_openvswitch: "{{ enable_neutron | bool and neutron_plugin_agent != 'linuxbridge' }}"
 #enable_ovn: "{{ enable_neutron | bool and neutron_plugin_agent == 'ovn' }}"
@@ -404,6 +443,7 @@ enable_octavia: "yes"
 # External Ceph options
 #######################
 # External Ceph - cephx auth enabled (this is the standard nowadays, defaults to yes)
+#external_ceph_cephx_enabled: "yes"
 external_ceph_cephx_enabled: "yes"
 
 # Glance
@@ -418,7 +458,6 @@ external_ceph_cephx_enabled: "yes"
 #ceph_cinder_backup_user: "cinder-backup"
 #ceph_cinder_backup_pool_name: "backups"
 # Nova
-# IS THIS WHY I'M FUCKED?
 #ceph_nova_keyring: "{{ ceph_cinder_keyring }}"
 ceph_nova_keyring: "ceph.client.nova.keyring"
 #ceph_nova_user: "nova"
@@ -454,8 +493,9 @@ ceph_nova_keyring: "ceph.client.nova.keyring"
 # Glance - Image Options
 ########################
 # Configure image backend.
+#glance_backend_ceph: "no"
 glance_backend_ceph: "yes"
-#glance_backend_file: "no"
+#glance_backend_file: "yes"
 #glance_backend_swift: "no"
 #glance_backend_vmware: "no"
 #enable_glance_image_cache: "no"
@@ -483,8 +523,8 @@ glance_backend_ceph: "yes"
 # Gnocchi options
 #################
 # Valid options are [ file, ceph, swift ]
+#gnocchi_backend_storage: "{% if enable_swift | bool %}swift{% else %}file{% endif %}"
 gnocchi_backend_storage: "rbd"
-
 # Valid options are [redis, '']
 #gnocchi_incoming_storage: "{{ 'redis' if enable_redis | bool else '' }}"
 
@@ -492,6 +532,7 @@ gnocchi_backend_storage: "rbd"
 # Cinder - Block Storage Options
 ################################
 # Enable / disable Cinder backends
+#cinder_backend_ceph: "no"
 cinder_backend_ceph: "yes"
 #cinder_backend_vmwarevc_vmdk: "no"
 #cinder_volume_group: "cinder-volumes"
@@ -527,6 +568,7 @@ cinder_backend_ceph: "yes"
 ########################
 # Nova - Compute Options
 ########################
+#nova_backend_ceph: "no"
 nova_backend_ceph: "yes"
 
 # Valid options are [ qemu, kvm, vmware ]
@@ -735,24 +777,33 @@ nova_backend_ceph: "yes"
 # - gateway_ip (optional)
 # - name
 # - no_gateway_ip (optional)
+#octavia_amp_network:
+#  name: lb-mgmt-net
+#  shared: false
+#  subnet:
+#    name: lb-mgmt-subnet
+#    cidr: "{{ octavia_amp_network_cidr }}"
+#    no_gateway_ip: yes
+#    enable_dhcp: yes
 octavia_amp_network:
   name: lb-mgmt-net
-  shared: true
-  external: true
-  provider_physical_network: physnet1
-  provider_segmentation_id: 131
-  provider_network_type: vxlan
+#  shared: true
+#  external: true
+#  provider_physical_network: physnet1
+#  provider_segmentation_id: 131
+#  provider_network_type: vxlan
   subnet:
     name: lb-mgmt-subnet
     cidr: "{{ octavia_amp_network_cidr }}"
     no_gateway_ip: no
     enable_dhcp: yes
-    gateway_ip: 172.31.0.1
-    allocation_pool_start: 172.31.0.100
-    allocation_pool_end: 172.31.0.199
+    gateway_ip: 172.17.0.241
+    allocation_pool_start: 172.17.0.100
+    allocation_pool_end: 172.17.0.199
+octavia_amp_network_cidr: 172.17.0.0/24
 
 # Octavia management network subnet CIDR.
-octavia_amp_network_cidr: 172.31.0.0/24
+#octavia_amp_network_cidr: 10.0.0.0/24
 
 #octavia_amp_image_tag: "amphora"
 
