--- a/files/kolla-globals-localpull.yml
+++ b/files/kolla-globals-localpull.yml
@@ -4,7 +4,7 @@
 # PINNED CONTAINER VERSIONS
 docker_registry: 192.168.127.220:4001
 docker_namespace: "feralcoder"
-openstack_release: "feralcoder-20210405_1104"
+openstack_release: "upstream-latest"
 
 ## LATEST CONTAINER VERSIONS
 #docker_registry:
