--- a/files/kolla-globals-remainder.yml
+++ b/files/kolla-globals-remainder.yml
@@ -1,3 +1,4 @@
+
 docker_yum_url: http://192.168.127.220/docker/centos/
 docker_yum_gpgkey: http://192.168.127.220/docker/centos/gpg
 docker_custom_config:
@@ -129,7 +130,7 @@ swift_storage_interface: "bond4" # I BELIEVE there's no interface defined for ce
 tunnel_interface: "bond6"
 #dns_interface: "{{ network_interface }}"
 #octavia_network_interface: "{{ api_interface }}"
-octavia_network_interface: "bond2"
+#octavia_network_interface: "bond2"
 
 # Configure the address family (AF) per network.
 # Valid options are [ ipv4, ipv6 ]
@@ -385,7 +386,7 @@ enable_neutron_provider_networks: "yes"
 #enable_nova_serialconsole_proxy: "no"
 #enable_nova_ssh: "yes"
 #enable_octavia: "no"
-enable_octavia: "yes"
+#enable_octavia: "yes"
 #enable_openvswitch: "{{ enable_neutron | bool and neutron_plugin_agent != 'linuxbridge' }}"
 #enable_ovn: "{{ enable_neutron | bool and neutron_plugin_agent == 'ovn' }}"
 #enable_ovs_dpdk: "no"
@@ -782,23 +783,24 @@ nova_backend_ceph: "yes"
 #    cidr: "{{ octavia_amp_network_cidr }}"
 #    no_gateway_ip: yes
 #    enable_dhcp: yes
-octavia_amp_network:
-  name: lb-mgmt-net
-  provider_network_type: vlan
-  provider_segmentation_id: 131
-  provider_physical_network: physnet1
-  external: false
-  shared: false
-  gateway_ip: 172.31.0.241
-  subnet:
-    name: lb-mgmt-subnet
-    cidr: "172.31.0.0/24"
-    allocation_pool_start: 172.31.0.100
-    allocation_pool_end: 172.31.0.199
-    gateway_ip: 172.31.0.241
-#    no_gateway_ip: no
-    enable_dhcp: yes
-#octavia_amp_network_cidr: 172.17.0.0/24
+#octavia_amp_network:
+#  name: lb-mgmt-net
+#  provider_network_type: vlan
+#  provider_segmentation_id: 131
+#  provider_physical_network: bond2
+##  provider_physical_network: physnet1
+#  external: false
+#  shared: false
+#  gateway_ip: 172.31.0.241
+#  subnet:
+#    name: lb-mgmt-subnet
+#    cidr: "172.31.0.0/24"
+#    allocation_pool_start: 172.31.0.100
+#    allocation_pool_end: 172.31.0.199
+#    gateway_ip: 172.31.0.241
+##    no_gateway_ip: no
+#    enable_dhcp: yes
+##octavia_amp_network_cidr: 172.17.0.0/24
 
 # Octavia management network subnet CIDR.
 #octavia_amp_network_cidr: 10.0.0.0/24
