--- a/files/kolla-swift-defaults-main.yml
+++ b/files/kolla-swift-defaults-main.yml
@@ -62,7 +62,8 @@ swift_devices_match_mode: "strict"
 swift_devices_name: "KOLLA_SWIFT_DATA"
 # For S3 API we need to defer the auth decision to allow s3api and s3token
 # middlewares to process requests using EC2 credentials.
-swift_delay_auth_decision: "{{ enable_swift_s3api | bool }}"
+swift_delay_auth_decision: "True"
+#swift_delay_auth_decision: "{{ enable_swift_s3api | bool }}"
 
 # Boolean, true if there is a dedicated replication network.
 swift_has_replication_network: "{{ swift_storage_interface != swift_replication_interface }}"
