--- a/files/kolla-globals-remainder.yml
+++ b/files/kolla-globals-remainder.yml
@@ -54,6 +54,7 @@ kolla_internal_vip_address: "172.17.0.104"
 # share the same address.  Specify a kolla_external_vip_address to separate
 # internal and external requests between two VIPs.
 #kolla_external_vip_address: "{{ kolla_internal_vip_address }}"
+kolla_external_vip_address: "192.168.39.10"
 
 # The Public address used to communicate with OpenStack as set in the public_url
 # for the endpoints that will be created. This DNS name should map to
@@ -119,6 +120,7 @@ network_interface: "bond1"
 # These can be adjusted for even more customization. The default is the same as
 # the 'network_interface'. These interfaces must contain an IP address.
 #kolla_external_vip_interface: "{{ network_interface }}"
+kolla_external_vip_interface: "bond7"
 #api_interface: "{{ network_interface }}"
 api_interface: "bond3"
 #storage_interface: "{{ network_interface }}"
