--- a/files/kolla-globals-remainder.yml
+++ b/files/kolla-globals-remainder.yml
@@ -285,9 +285,11 @@ neutron_external_interface: "bond2"
 
 # OpenStack services can be enabled or disabled with these options
 #enable_aodh: "no"
+enable_aodh: "yes"
 #enable_barbican: "no"
 #enable_blazar: "no"
 #enable_ceilometer: "no"
+enable_ceilometer: "yes"
 #enable_ceilometer_ipmi: "no"
 #enable_cells: "no"
 #enable_central_logging: "no"
