enable gnocchi for telemetry

--- a/files/kolla-globals-remainder.yml
+++ b/files/kolla-globals-remainder.yml
@@ -316,7 +316,7 @@ enable_elasticsearch_curator: "yes"
 #enable_fluentd: "yes"
 #enable_freezer: "no"
 #enable_gnocchi: "no"
-enable_gnocchi: "no"
+enable_gnocchi: "yes"
 #enable_gnocchi_statsd: "no"
 #enable_grafana: "no"
 enable_grafana: "yes"
