--- a/files/kolla-globals-remainder.yml
+++ b/files/kolla-globals-remainder.yml
@@ -286,6 +286,7 @@ neutron_external_interface: "bond2"
 # OpenStack services can be enabled or disabled with these options
 #enable_aodh: "no"
 enable_aodh: "yes"
+# Enabling barbican may break octavia for missing region...
 #enable_barbican: "no"
 #enable_blazar: "no"
 #enable_ceilometer: "no"
