--- a/files/kolla-globals-remainder.yml
+++ b/files/kolla-globals-remainder.yml
@@ -361,11 +361,12 @@ enable_grafana: "yes"
 #enable_magnum: "no"
 enable_magnum: "yes"
 #enable_manila: "no"
-enable_manila: "no"
+enable_manila: "yes"
 #enable_manila_backend_generic: "no"
+enable_manila_backend_generic: "yes"
 #enable_manila_backend_hnas: "no"
 #enable_manila_backend_cephfs_native: "no"
-enable_manila_backend_cephfs_native: "no"
+enable_manila_backend_cephfs_native: "yes"
 #enable_manila_backend_cephfs_nfs: "no"
 #enable_mariabackup: "no"
 enable_mariabackup: "yes"
@@ -391,7 +392,7 @@ enable_neutron_provider_networks: "yes"
 #enable_nova_serialconsole_proxy: "no"
 #enable_nova_ssh: "yes"
 #enable_octavia: "no"
-#enable_octavia: "yes"
+enable_octavia: "yes"
 #enable_openvswitch: "{{ enable_neutron | bool and neutron_plugin_agent != 'linuxbridge' }}"
 #enable_ovn: "{{ enable_neutron | bool and neutron_plugin_agent == 'ovn' }}"
 #enable_ovs_dpdk: "no"
@@ -820,3 +821,31 @@ nova_backend_ceph: "yes"
 #octavia_amp_boot_network_list:
 #octavia_amp_secgroup_list:
 #octavia_amp_flavor_id:
+
+octavia_certs_country: US
+octavia_certs_state: California
+octavia_certs_organization: FeralStack
+octavia_certs_organizational_unit: Octavia
+octavia_amp_network:
+  name: lb-mgmt-net
+  provider_network_type: vlan
+  provider_segmentation_id: 131
+  provider_physical_network: physnet1
+  external: false
+  shared: false
+  subnet:
+    name: lb-mgmt-subnet
+    cidr: "172.31.0.0/24"
+    allocation_pool_start: "172.31.0.10"
+    allocation_pool_end: "172.31.0.254"
+    gateway_ip: "172.31.0.1/24"
+    enable_dhcp: yes
+enable_octavia: "yes"
+octavia_network_interface: v-lbaas
+octavia_amp_flavor:
+  name: "amphora"
+  is_public: no
+  vcpus: 1
+  ram: 1024
+  disk: 5
+
