--- a/files/ceph-client-manila.conf
+++ b/files/ceph-client-manila.conf
@@ -3,5 +3,5 @@ client mount uid = 0
 client mount gid = 0
 log file = /opt/stack/logs/ceph-client.manila.log
 admin socket = /opt/stack/status/stack/ceph-$name.$pid.asok
-keyring = /etc/ceph/manila.keyring
+keyring = /etc/ceph/ceph.client.manila.keyring
 
