--- a/files/kolla-globals-remainder.yml
+++ b/files/kolla-globals-remainder.yml
@@ -361,12 +361,12 @@ enable_grafana: "yes"
 #enable_magnum: "no"
 enable_magnum: "yes"
 #enable_manila: "no"
-enable_manila: "yes"
+enable_manila: "no"
 #enable_manila_backend_generic: "no"
-enable_manila_backend_generic: "yes"
+enable_manila_backend_generic: "no"
 #enable_manila_backend_hnas: "no"
 #enable_manila_backend_cephfs_native: "no"
-enable_manila_backend_cephfs_native: "yes"
+enable_manila_backend_cephfs_native: "no"
 #enable_manila_backend_cephfs_nfs: "no"
 #enable_mariabackup: "no"
 enable_mariabackup: "yes"
