--- a/files/ceph-all.yml
+++ b/files/ceph-all.yml
@@ -18,8 +18,8 @@ is_hci: true
 cephx: true
 configure_firewall: false
 dashboard_enabled: True
-dashboard_protocol: https
-dashboard_port: 8443
+dashboard_protocol: http
+dashboard_port: 8480
 dashboard_crt: ''
 dashboard_key: ''
 dashboard_frontend_vip: '172.19.2.10'
