--- a/files/kolla-globals-remainder.yml
+++ b/files/kolla-globals-remainder.yml
@@ -366,9 +366,9 @@ enable_manila: "yes"
 enable_manila_backend_generic: "yes"
 #enable_manila_backend_hnas: "no"
 #enable_manila_backend_cephfs_native: "no"
-enable_manila_backend_cephfs_native: "no"
+enable_manila_backend_cephfs_native: "yes"
 #enable_manila_backend_cephfs_nfs: "no"
-enable_manila_backend_cephfs_nfs: "no"
+enable_manila_backend_cephfs_nfs: "yes"
 #enable_mariabackup: "no"
 enable_mariabackup: "yes"
 #enable_masakari: "no"
