--- a/files/kolla-globals-localpull.yml
+++ b/files/kolla-globals-localpull.yml
@@ -4,10 +4,10 @@
 # PINNED CONTAINER VERSIONS
 docker_registry: 192.168.127.220:4001
 docker_namespace: "feralcoder"
-openstack_release: "feralcoder-latest"
+openstack_release: "feralcoder-wallaby-latest"
 
 ## LATEST CONTAINER VERSIONS
 #docker_registry:
 #docker_registry_username: feralcoder
 #docker_namespace: "kolla"
-#openstack_release: "victoria"
+#openstack_release: "wallaby"
