--- a/files/kolla-swift-templates-proxy-server.conf.yml
+++ b/files/kolla-swift-templates-proxy-server.conf.yml
@@ -99,5 +99,6 @@ use = egg:swift#s3api
 
 [filter:s3token]
 use = egg:swift#s3token
-www_authenticate_uri = {{ keystone_internal_url }}/v3
+auth_uri = {{ keystone_internal_url }}/v3
+
 {% endif %}
