--- a/files/kolla-globals-remainder.victoria.yml
+++ b/files/kolla-globals-remainder.victoria.yml
@@ -1,4 +1,10 @@
----
+
+docker_yum_url: http://192.168.127.220/docker/centos/
+docker_yum_gpgkey: http://192.168.127.220/docker/centos/gpg
+docker_custom_config:
+  registry-mirrors:
+    - http://192.168.127.220:4000
+
 # You can use this file to override _any_ variable throughout Kolla.
 # Additional options can be found in the
 # 'kolla-ansible/ansible/group_vars/all.yml' file. Default value of all the
@@ -16,9 +22,10 @@
 
 # Valid options are [ binary, source ]
 #kolla_install_type: "binary"
+kolla_install_type: "source"
 
 # Do not override this unless you know what you are doing.
-#openstack_release: "master"
+#openstack_release: "victoria"
 
 # Docker image tag used by default.
 #openstack_tag: "{{ openstack_release ~ openstack_tag_suffix }}"
@@ -35,6 +42,7 @@
 # in "OpenStack options" section, and set this value to the IP of your
 # 'network_interface' as set in the Networking section below.
 #kolla_internal_vip_address: "10.10.10.254"
+kolla_internal_vip_address: "172.19.4.104"
 
 # This is the DNS name that maps to the kolla_internal_vip_address VIP. By
 # default it is the same as kolla_internal_vip_address.
@@ -46,6 +54,7 @@
 # share the same address.  Specify a kolla_external_vip_address to separate
 # internal and external requests between two VIPs.
 #kolla_external_vip_address: "{{ kolla_internal_vip_address }}"
+kolla_external_vip_address: "192.168.39.10"
 
 # The Public address used to communicate with OpenStack as set in the public_url
 # for the endpoints that will be created. This DNS name should map to
@@ -62,6 +71,7 @@
 # Custom docker registry settings:
 #docker_registry:
 #docker_registry_insecure: "{{ 'yes' if docker_registry else 'no' }}"
+docker_registry_insecure: "{{ 'yes' if docker_registry else 'no' }}"
 #docker_registry_username:
 # docker_registry_password is set in the passwords.yml file.
 
@@ -105,17 +115,24 @@
 # interface on all hosts and give the bond name here. Similar strategy can be
 # followed for other types of interfaces.
 #network_interface: "eth0"
+network_interface: "bond1"
 
 # These can be adjusted for even more customization. The default is the same as
 # the 'network_interface'. These interfaces must contain an IP address.
 #kolla_external_vip_interface: "{{ network_interface }}"
+kolla_external_vip_interface: "bond7"
 #api_interface: "{{ network_interface }}"
+api_interface: "bond3"
 #storage_interface: "{{ network_interface }}"
+storage_interface: "bond4"
 #swift_storage_interface: "{{ storage_interface }}"
+swift_storage_interface: "bond4" # I BELIEVE there's no interface defined for ceph-internals, here
 #swift_replication_interface: "{{ swift_storage_interface }}"
 #tunnel_interface: "{{ network_interface }}"
+tunnel_interface: "bond6"
 #dns_interface: "{{ network_interface }}"
 #octavia_network_interface: "{{ api_interface }}"
+#octavia_network_interface: "bond2"
 
 # Configure the address family (AF) per network.
 # Valid options are [ ipv4, ipv6 ]
@@ -135,6 +152,7 @@
 # configurations. It is recommended this interface not be configured with any IP
 # addresses for that reason.
 #neutron_external_interface: "eth1"
+neutron_external_interface: "bond2"
 
 # Valid options are [ openvswitch, ovn, linuxbridge, vmware_nsxv, vmware_nsxv3, vmware_dvs ]
 # if vmware_nsxv3 is selected, enable_openvswitch MUST be set to "no" (default is yes)
@@ -214,7 +232,6 @@
 # Backend options
 ##################
 #kolla_httpd_keep_alive: "60"
-#kolla_httpd_timeout: "60"
 
 #####################
 # Backend TLS options
@@ -256,7 +273,6 @@
 # These roles are required for Kolla to be operation, however a savvy deployer
 # could disable some of these required roles and run their own services.
 #enable_glance: "{{ enable_openstack_core | bool }}"
-#enable_hacluster: "no"
 #enable_haproxy: "yes"
 #enable_keepalived: "{{ enable_haproxy | bool }}"
 #enable_keystone: "{{ enable_openstack_core | bool }}"
@@ -269,14 +285,19 @@
 
 # OpenStack services can be enabled or disabled with these options
 #enable_aodh: "no"
+enable_aodh: "yes"
+# Enabling barbican may break octavia for missing region...
 #enable_barbican: "no"
 #enable_blazar: "no"
 #enable_ceilometer: "no"
+enable_ceilometer: "yes"
 #enable_ceilometer_ipmi: "no"
 #enable_cells: "no"
 #enable_central_logging: "no"
-#enable_chrony: "no"
+enable_central_logging: "yes"
+#enable_chrony: "yes"
 #enable_cinder: "no"
+enable_cinder: "yes"
 #enable_cinder_backup: "yes"
 #enable_cinder_backend_hnas_nfs: "no"
 #enable_cinder_backend_iscsi: "{{ enable_cinder_backend_lvm | bool or enable_cinder_backend_zfssa_iscsi | bool }}"
@@ -289,14 +310,17 @@
 #enable_cyborg: "no"
 #enable_designate: "no"
 #enable_destroy_images: "no"
-#enable_elasticsearch: "{{ 'yes' if enable_central_logging | bool or enable_osprofiler | bool or enable_skydive | bool or enable_monasca | bool or (enable_cloudkitty | bool and cloudkitty_storage_backend == 'elasticsearch') else 'no' }}"
+#enable_elasticsearch: "{{ 'yes' if enable_central_logging | bool or enable_osprofiler | bool or enable_skydive | bool or enable_monasca | bool else 'no' }}"
 #enable_elasticsearch_curator: "no"
+enable_elasticsearch_curator: "yes"
 #enable_etcd: "no"
 #enable_fluentd: "yes"
 #enable_freezer: "no"
 #enable_gnocchi: "no"
+enable_gnocchi: "yes"
 #enable_gnocchi_statsd: "no"
 #enable_grafana: "no"
+enable_grafana: "yes"
 #enable_heat: "{{ enable_openstack_core | bool }}"
 #enable_horizon: "{{ enable_openstack_core | bool }}"
 #enable_horizon_blazar: "{{ enable_blazar | bool }}"
@@ -305,6 +329,7 @@
 #enable_horizon_freezer: "{{ enable_freezer | bool }}"
 #enable_horizon_heat: "{{ enable_heat | bool }}"
 #enable_horizon_ironic: "{{ enable_ironic | bool }}"
+#enable_horizon_karbor: "{{ enable_karbor | bool }}"
 #enable_horizon_magnum: "{{ enable_magnum | bool }}"
 #enable_horizon_manila: "{{ enable_manila | bool }}"
 #enable_horizon_masakari: "{{ enable_masakari | bool }}"
@@ -313,7 +338,9 @@
 #enable_horizon_murano: "{{ enable_murano | bool }}"
 #enable_horizon_neutron_vpnaas: "{{ enable_neutron_vpnaas | bool }}"
 #enable_horizon_octavia: "{{ enable_octavia | bool }}"
+#enable_horizon_qinling: "{{ enable_qinling | bool }}"
 #enable_horizon_sahara: "{{ enable_sahara | bool }}"
+#enable_horizon_searchlight: "{{ enable_searchlight | bool }}"
 #enable_horizon_senlin: "{{ enable_senlin | bool }}"
 #enable_horizon_solum: "{{ enable_solum | bool }}"
 #enable_horizon_tacker: "{{ enable_tacker | bool }}"
@@ -327,17 +354,23 @@
 #enable_ironic_neutron_agent: "{{ enable_neutron | bool and enable_ironic | bool }}"
 #enable_ironic_pxe_uefi: "no"
 #enable_iscsid: "{{ (enable_cinder | bool and enable_cinder_backend_iscsi | bool) or enable_ironic | bool }}"
+#enable_karbor: "no"
 #enable_kafka: "{{ enable_monasca | bool }}"
 #enable_kibana: "{{ 'yes' if enable_central_logging | bool or enable_monasca | bool else 'no' }}"
 #enable_kuryr: "no"
 #enable_magnum: "no"
+enable_magnum: "yes"
 #enable_manila: "no"
+enable_manila: "yes"
 #enable_manila_backend_generic: "no"
+enable_manila_backend_generic: "yes"
 #enable_manila_backend_hnas: "no"
 #enable_manila_backend_cephfs_native: "no"
+enable_manila_backend_cephfs_native: "yes"
 #enable_manila_backend_cephfs_nfs: "no"
-#enable_manila_backend_glusterfs_nfs: "no"
+enable_manila_backend_cephfs_nfs: "yes"
 #enable_mariabackup: "no"
+enable_mariabackup: "yes"
 #enable_masakari: "no"
 #enable_mistral: "no"
 #enable_monasca: "no"
@@ -350,6 +383,7 @@
 #enable_neutron_agent_ha: "no"
 #enable_neutron_bgp_dragent: "no"
 #enable_neutron_provider_networks: "no"
+enable_neutron_provider_networks: "yes"
 #enable_neutron_segments: "no"
 #enable_neutron_sfc: "no"
 #enable_neutron_trunk: "no"
@@ -359,7 +393,7 @@
 #enable_nova_serialconsole_proxy: "no"
 #enable_nova_ssh: "yes"
 #enable_octavia: "no"
-#enable_octavia_driver_agent: "{{ enable_octavia | bool and neutron_plugin_agent == 'ovn' }}"
+#enable_octavia: "yes"
 #enable_openvswitch: "{{ enable_neutron | bool and neutron_plugin_agent != 'linuxbridge' }}"
 #enable_ovn: "{{ enable_neutron | bool and neutron_plugin_agent == 'ovn' }}"
 #enable_ovs_dpdk: "no"
@@ -368,9 +402,11 @@
 #enable_placement: "{{ enable_nova | bool or enable_zun | bool }}"
 #enable_prometheus: "no"
 #enable_qdrouterd: "{{ 'yes' if om_rpc_transport == 'amqp' else 'no' }}"
+#enable_qinling: "no"
 #enable_rally: "no"
 #enable_redis: "no"
 #enable_sahara: "no"
+#enable_searchlight: "no"
 #enable_senlin: "no"
 #enable_skydive: "no"
 #enable_solum: "no"
@@ -413,6 +449,7 @@
 #######################
 # External Ceph - cephx auth enabled (this is the standard nowadays, defaults to yes)
 #external_ceph_cephx_enabled: "yes"
+external_ceph_cephx_enabled: "yes"
 
 # Glance
 #ceph_glance_keyring: "ceph.client.glance.keyring"
@@ -427,6 +464,7 @@
 #ceph_cinder_backup_pool_name: "backups"
 # Nova
 #ceph_nova_keyring: "{{ ceph_cinder_keyring }}"
+ceph_nova_keyring: "ceph.client.nova.keyring"
 #ceph_nova_user: "nova"
 #ceph_nova_pool_name: "vms"
 # Gnocchi
@@ -461,6 +499,7 @@
 ########################
 # Configure image backend.
 #glance_backend_ceph: "no"
+glance_backend_ceph: "yes"
 #glance_backend_file: "yes"
 #glance_backend_swift: "no"
 #glance_backend_vmware: "no"
@@ -490,7 +529,7 @@
 #################
 # Valid options are [ file, ceph, swift ]
 #gnocchi_backend_storage: "{% if enable_swift | bool %}swift{% else %}file{% endif %}"
-
+gnocchi_backend_storage: "rbd"
 # Valid options are [redis, '']
 #gnocchi_incoming_storage: "{{ 'redis' if enable_redis | bool else '' }}"
 
@@ -499,6 +538,7 @@
 ################################
 # Enable / disable Cinder backends
 #cinder_backend_ceph: "no"
+cinder_backend_ceph: "yes"
 #cinder_backend_vmwarevc_vmdk: "no"
 #cinder_volume_group: "cinder-volumes"
 # Valid options are [ '', redis, etcd ]
@@ -534,6 +574,7 @@
 # Nova - Compute Options
 ########################
 #nova_backend_ceph: "no"
+nova_backend_ceph: "yes"
 
 # Valid options are [ qemu, kvm, vmware ]
 #nova_compute_virt_type: "kvm"
@@ -558,9 +599,6 @@
 ##############################
 # Enable distributed floating ip for OVN deployments
 #neutron_ovn_distributed_fip: "no"
-
-# Enable DHCP agent(s) to use with OVN
-#neutron_ovn_dhcp_agent: "no"
 
 #############################
 # Horizon - Dashboard Options
@@ -598,37 +636,6 @@
 #hnas_evs_id:
 #hnas_evs_ip:
 #hnas_file_system_name:
-
-# Gluster backend configuration
-# The option of glusterfs share layout can be directory or volume
-# The default option of share layout is 'volume'
-#manila_glusterfs_share_layout:
-# The default option of nfs server type is 'Gluster'
-#manila_glusterfs_nfs_server_type:
-
-# Volume layout Options (required)
-# If the glusterfs server requires remote ssh, then you need to fill
-# in 'manila_glusterfs_servers', ssh user 'manila_glusterfs_ssh_user', and ssh password
-# 'manila_glusterfs_ssh_password'.
-# 'manila_glusterfs_servers' value List of GlusterFS servers which provide volumes,
-# the format is for example:
-#   - 10.0.1.1
-#   - 10.0.1.2
-#manila_glusterfs_servers:
-#manila_glusterfs_ssh_user:
-#manila_glusterfs_ssh_password:
-# Used to filter GlusterFS volumes for share creation.
-# Examples: manila-share-volume-\\d+$, manila-share-volume-#{size}G-\\d+$;
-#manila_glusterfs_volume_pattern:
-
-# Directory layout Options
-# If the glusterfs server is on the local node of the manila share,
-# it’s of the format <glustervolserver>:/<glustervolid>
-# If the glusterfs server is on a remote node,
-# it’s of the format <username>@<glustervolserver>:/<glustervolid> ,
-# and define 'manila_glusterfs_ssh_password'
-#manila_glusterfs_target:
-#manila_glusterfs_mount_point_base:
 
 ################################
 # Swift - Object Storage Options
@@ -702,9 +709,6 @@
 #  - host1:port1
 #  - host2:port2
 
-# Whether to keep using Prometheus server v1 (due to no data-preserving migration path to v2)
-#prometheus_use_v1: no
-
 #########
 # Freezer
 #########
@@ -724,7 +728,7 @@
 ##########################################
 # Octavia - openstack loadbalancer Options
 ##########################################
-# Whether to run Kolla Ansible's automatic configuration for Octavia.
+# Whether to run Kolla-Ansible's automatic configuration for Octavia.
 # NOTE: if you upgrade from Ussuri, you must set `octavia_auto_configure` to `no`
 # and keep your other Octavia config like before.
 #octavia_auto_configure: yes
@@ -778,9 +782,6 @@
 # - gateway_ip (optional)
 # - name
 # - no_gateway_ip (optional)
-# - ip_version (optional)
-# - ipv6_address_mode (optional)
-# - ipv6_ra_mode (optional)
 #octavia_amp_network:
 #  name: lb-mgmt-net
 #  shared: false
@@ -789,9 +790,27 @@
 #    cidr: "{{ octavia_amp_network_cidr }}"
 #    no_gateway_ip: yes
 #    enable_dhcp: yes
+#octavia_amp_network:
+#  name: lb-mgmt-net
+#  provider_network_type: vlan
+#  provider_segmentation_id: 131
+#  provider_physical_network: bond2
+##  provider_physical_network: physnet1
+#  external: false
+#  shared: false
+#  gateway_ip: 172.31.0.241
+#  subnet:
+#    name: lb-mgmt-subnet
+#    cidr: "172.31.0.0/24"
+#    allocation_pool_start: 172.31.0.100
+#    allocation_pool_end: 172.31.0.199
+#    gateway_ip: 172.31.0.241
+##    no_gateway_ip: no
+#    enable_dhcp: yes
+##octavia_amp_network_cidr: 172.17.0.0/24
 
 # Octavia management network subnet CIDR.
-#octavia_amp_network_cidr: 10.1.0.0/24
+#octavia_amp_network_cidr: 10.0.0.0/24
 
 #octavia_amp_image_tag: "amphora"
 
@@ -803,10 +822,3 @@
 #octavia_amp_boot_network_list:
 #octavia_amp_secgroup_list:
 #octavia_amp_flavor_id:
-
-####################
-# Corosync options
-####################
-
-# this is UDP port
-#hacluster_corosync_port: 5405
