don't check in files generated from templates

--- a/admin-scripts/utility/docker-images/.gitignore
+++ b/admin-scripts/utility/docker-images/.gitignore
@@ -1,3 +1,5 @@
 centos-feralcoder-stream8/feralcoder.repo
 centos-feralcoder-8/feralcoder.repo
+centos-updated-feralcoder-stream8/Dockerfile
+centos-updated-feralcoder-8/Dockerfile
 
